<resources>
    <string name="app_name">The Movies</string>

    <string name="title_activity_settings">Settings</string>

    <string name="pref_general_category">General</string>
    <string name="lang_title">Language</string>

    <string name="now_playing">Now Playing</string>
    <string name="tab_title_tv_show">TV Show</string>
    <string name="detail_activity_title">Detail</string>
    <string name="detail_runtime">Runtime: %d mins</string>
    <string name="detail_synopsis">Synopsis</string>
    <string name="detail_rating">Rating: %s</string>
    <string name="runtime_mins">%d mins</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="favorite_empty_desc">You have not favorited anything yet…</string>
    <string name="home">Movie</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="notify_saved_to_favorite">Saved to favorite</string>
    <string name="notify_removed_from_favorite">Removed from favorite</string>
    <string name="count_voters">%s voters</string>

    <string name="reminder_daily_title">Daily Reminder</string>
    <string name="reminder_daily_content_text">Hey, don\'t forget to discover new movies or tv show on The Movies today</string>
    <string name="reminder_release_today_title">Today Release</string>
    <string name="reminder_release_today_content_text">Here are some movies that released today</string>

    <string name="widget_title">❤️ Movies &amp; TV Show</string>
    <string name="release_today_content">\u0020released today!</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_summary_on">Daily reminder enabled @ 7AM</string>
    <string name="today_release_reminder_summary_on">Today\'s Release enabled @ 8AM</string>
    <string name="today_releaase_reminder_title">Release Today Reminder</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="overview">Overview</string>
    <string name="review">Review</string>
</resources>
