<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_general_category">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/settings_language"
            app:entryValues="@array/settings_language_values"
            app:key="setting_lang"
            app:title="@string/lang_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Reminder">
        <SwitchPreferenceCompat
            app:key="setting_daily_reminder"
            app:summaryOn="@string/daily_reminder_summary_on"
            app:title="@string/daily_reminder_title" />
        <SwitchPreferenceCompat
            app:key="setting_release_today_reminder"
            app:summaryOn="@string/today_release_reminder_summary_on"
            app:title="@string/today_releaase_reminder_title" />
    </PreferenceCategory>

</PreferenceScreen>
